--- a/1. Acquiring the Links.ipynb
+++ b/1. Acquiring the Links.ipynb
@@ -6326,11 +6326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe.to_csv('Data.csv')"
+    "dataframe.to_csv('data/links.csv')"
    ]
   },
   {
