--- a/3. Spotify Charts Data.ipynb
+++ b/3. Spotify Charts Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "(125, 3)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "(95, 3)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ID = data['ID'] "
+    "ID = data['ID'].astype(int, errors='ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,135 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://itunes.apple.com/lookup?id=1459227062.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1387922676.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1439313975.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1455713016.0',\n",
-       " 'https://itunes.apple.com/lookup?id=160904630.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1447016339.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1472161310.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1403299829.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1495282149.0',\n",
-       " 'https://itunes.apple.com/lookup?id=137334807.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1456423942.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1033048640.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1450994021.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1435073483.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1438162222.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1494828137.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1134840455.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1322200189.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1438054347.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1236778275.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1464406768.0',\n",
-       " 'https://itunes.apple.com/lookup?id=431160869.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1468409996.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1487513861.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1205030005.0',\n",
-       " 'https://itunes.apple.com/lookup?id=278981407.0',\n",
-       " 'https://itunes.apple.com/lookup?id=803978236.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1253570474.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1399485424.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1474359464.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1442945036.0',\n",
-       " 'https://itunes.apple.com/lookup?id=444083093.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1434186181.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1346207297.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1455314669.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1109271715.0',\n",
-       " 'https://itunes.apple.com/lookup?id=135067274.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1346062517.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1249754020.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1439897716.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1074507850.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1264843400.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1485345039.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1106886477.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1327769095.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1458858435.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1461841525.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1416206538.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1472253940.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1270483452.0',\n",
-       " 'https://itunes.apple.com/lookup?id=631094342.0',\n",
-       " 'https://itunes.apple.com/lookup?id=596047499.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1200361736.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1065559535.0',\n",
-       " 'https://itunes.apple.com/lookup?id=659155419.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1365312021.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1435732792.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1493381315.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1489587988.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1166583478.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1473626965.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1418015987.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1334878780.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1463174591.0',\n",
-       " 'https://itunes.apple.com/lookup?id=717407884.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1051557000.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1402387788.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1092280776.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1478746415.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1477725858.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1470898919.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1496689557.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1351389458.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1358793371.0',\n",
-       " 'https://itunes.apple.com/lookup?id=928159684.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1430315931.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1043699613.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1437039510.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1208024744.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1459220201.0',\n",
-       " 'https://itunes.apple.com/lookup?id=834515877.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1483525141.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1335814741.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1069757084.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1487574016.0',\n",
-       " 'https://itunes.apple.com/lookup?id=398964210.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1475512777.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1317416071.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1438472688.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1483638752.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1477350613.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1393035987.0',\n",
-       " 'https://itunes.apple.com/lookup?id=151230264.0',\n",
-       " 'https://itunes.apple.com/lookup?id=1195370480.0',\n",
-       " 'https://itunes.apple.com/lookup?id=394775318.0']"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "links"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'results'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-20046bca4beb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlinks\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'results'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'results'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = requests.get(links[0]) \n",
     "data = response.json()\n",
@@ -251,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,11 +150,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['wrapperType', 'kind', 'collectionId', 'trackId', 'artistName',\n",
+       "       'collectionName', 'trackName', 'collectionCensoredName',\n",
+       "       'trackCensoredName', 'collectionViewUrl', 'feedUrl', 'trackViewUrl',\n",
+       "       'artworkUrl30', 'artworkUrl60', 'artworkUrl100', 'collectionPrice',\n",
+       "       'trackPrice', 'trackRentalPrice', 'collectionHdPrice', 'trackHdPrice',\n",
+       "       'trackHdRentalPrice', 'releaseDate', 'collectionExplicitness',\n",
+       "       'trackExplicitness', 'trackCount', 'country', 'currency',\n",
+       "       'primaryGenreName', 'contentAdvisoryRating', 'artworkUrl600',\n",
+       "       'genreIds', 'genres', 'artistId', 'artistViewUrl'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "data['Description'] = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'resultCount': 1,\n",
+       " 'results': [{'wrapperType': 'track',\n",
+       "   'kind': 'podcast',\n",
+       "   'artistId': 850139119,\n",
+       "   'collectionId': 394775318,\n",
+       "   'trackId': 394775318,\n",
+       "   'artistName': 'Roman Mars',\n",
+       "   'collectionName': '99% Invisible',\n",
+       "   'trackName': '99% Invisible',\n",
+       "   'collectionCensoredName': '99% Invisible',\n",
+       "   'trackCensoredName': '99% Invisible',\n",
+       "   'artistViewUrl': 'https://podcasts.apple.com/us/artist/radiotopia/850139119?uo=4',\n",
+       "   'collectionViewUrl': 'https://podcasts.apple.com/us/podcast/99-invisible/id394775318?uo=4',\n",
+       "   'feedUrl': 'http://feeds.99percentinvisible.org/99percentinvisible',\n",
+       "   'trackViewUrl': 'https://podcasts.apple.com/us/podcast/99-invisible/id394775318?uo=4',\n",
+       "   'artworkUrl30': 'https://is4-ssl.mzstatic.com/image/thumb/Podcasts113/v4/50/ee/2b/50ee2bb6-bb40-44ca-943f-396d9897da51/mza_3777258724161926295.png/30x30bb.jpg',\n",
+       "   'artworkUrl60': 'https://is4-ssl.mzstatic.com/image/thumb/Podcasts113/v4/50/ee/2b/50ee2bb6-bb40-44ca-943f-396d9897da51/mza_3777258724161926295.png/60x60bb.jpg',\n",
+       "   'artworkUrl100': 'https://is4-ssl.mzstatic.com/image/thumb/Podcasts113/v4/50/ee/2b/50ee2bb6-bb40-44ca-943f-396d9897da51/mza_3777258724161926295.png/100x100bb.jpg',\n",
+       "   'collectionPrice': 0.0,\n",
+       "   'trackPrice': 0.0,\n",
+       "   'trackRentalPrice': 0,\n",
+       "   'collectionHdPrice': 0,\n",
+       "   'trackHdPrice': 0,\n",
+       "   'trackHdRentalPrice': 0,\n",
+       "   'releaseDate': '2020-02-12T02:15:00Z',\n",
+       "   'collectionExplicitness': 'cleaned',\n",
+       "   'trackExplicitness': 'cleaned',\n",
+       "   'trackCount': 300,\n",
+       "   'country': 'USA',\n",
+       "   'currency': 'USD',\n",
+       "   'primaryGenreName': 'Design',\n",
+       "   'contentAdvisoryRating': 'Clean',\n",
+       "   'artworkUrl600': 'https://is4-ssl.mzstatic.com/image/thumb/Podcasts113/v4/50/ee/2b/50ee2bb6-bb40-44ca-943f-396d9897da51/mza_3777258724161926295.png/600x600bb.jpg',\n",
+       "   'genreIds': ['1402', '26', '1301'],\n",
+       "   'genres': ['Design', 'Podcasts', 'Arts']}],\n",
+       " 'Description': []}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-33-4abb8c1267c9>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-33-4abb8c1267c9>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    if description is not None:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "    bs.find('div', 'product-review')\n",
+    "      if description is not None:\n",
+    "                    descr_parag = description.findAll('p')\n",
+    "                    for parag in descr_parag:\n",
+    "                        podcast_description = parag.getText()"
    ]
   },
   {
@@ -288,14 +269,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "description = bs.find('div', 'product-review')\n",
+    "                if description is not None:\n",
+    "                    descr_parag = description.findAll('p')\n",
+    "                    for parag in descr_parag:\n",
+    "                        podcast_description = parag.getText()"
+   ]
   }
  ],
  "metadata": {
