--- a/3. Spotify Charts Data.ipynb
+++ b/3. Spotify Charts Data.ipynb
@@ -179,12 +179,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['Description'] = []"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "https://podcasts.apple.com/us/podcast/calm-music-for-focus-relaxation-and-meditation/id1489587988?uo=4    1\n",
+       "https://podcasts.apple.com/us/podcast/crime-junkie/id1322200189?uo=4                                      1\n",
+       "https://podcasts.apple.com/us/podcast/guided-sleep-meditations/id834515877?uo=4                           1\n",
+       "https://podcasts.apple.com/us/podcast/mythology/id1442945036?uo=4                                         1\n",
+       "https://podcasts.apple.com/us/podcast/economist-radio/id151230264?uo=4                                    1\n",
+       "                                                                                                         ..\n",
+       "https://podcasts.apple.com/us/podcast/adulting-with-joyce-pring/id1439313975?uo=4                         1\n",
+       "https://podcasts.apple.com/us/podcast/get-sleepy/id1487513861?uo=4                                        1\n",
+       "https://podcasts.apple.com/us/podcast/creepsilog/id1470898919?uo=4                                        1\n",
+       "https://podcasts.apple.com/us/podcast/the-daily/id1200361736?uo=4                                         1\n",
+       "https://podcasts.apple.com/us/podcast/the-trypod/id1461841525?uo=4                                        1\n",
+       "Name: collectionViewUrl, Length: 95, dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
